adding on site and main option for reading entry connected to cards
